package tn.isetbizerte.pfe.hrbackend.common.enums;

public enum ApprovalDecision {
    PENDING,
    APPROVED,
    REJECTED
}

