package tn.isetbizerte.pfe.hrbackend.common.enums;

public enum LeaveStatus {
    PENDING,
    APPROVED,
    REJECTED
}

