package tn.isetbizerte.pfe.hrbackend.common.enums;

public enum LeaveType {
    ANNUAL,
    SICK,
    UNPAID,
    MATERNITY,
    PATERNITY,
    OTHER
}

