package tn.isetbizerte.pfe.hrbackend.modules.user.entity;

public enum TypeRole {
    NEW_USER,       // UTILISATEUR_NORMAL - Default role, waiting for HR approval
    EMPLOYEE,       // EMPLOYE
    TEAM_LEADER,    // CHEF_EQUIPE
    HR_MANAGER      // RESPONSABLE_RH
}

